Fixes font and layout issues

--- a/src/features/gps/downloadGamePage/assets/styles/about-golfin-game.css
+++ b/src/features/gps/downloadGamePage/assets/styles/about-golfin-game.css
@@ -21,6 +21,10 @@
     font-weight: 400;
     line-height: 115.404%;
     letter-spacing: 1.04px;
+
+    @media (max-width: 440px) {
+      font-size: 11px;
+    }
   }
 }
 
@@ -41,6 +45,10 @@
   background-size: 166.925% 145.168%;
   background-repeat: no-repeat;
   mix-blend-mode: multiply;
+
+  @media (max-width: 450px) {
+    z-index: -2;
+  }
 
   span {
     color: #000;
@@ -75,6 +83,20 @@
     position: absolute;
   }
 
+  @media (max-width: 430px) {
+    .box-one-text {
+      left: 73px;
+    }
+
+    .box-two-text {
+      left: 339px;
+    }
+
+    .box-three-text {
+      left: 56px;
+    }
+  }
+
   img {
     position: absolute;
   }
@@ -83,6 +105,7 @@
     height: 308px;
     z-index: 2;
   }
+
 
   .golf-gps {
     width: 238px;
@@ -107,23 +130,49 @@
 
   }
 
+  @media (max-width: 430px) {
+    .shots {
+      left: 20px;
+    }
+
+    .items {
+      left: 255px;
+    }
+
+    .golf-gps {
+      left: 10px;
+    }
+  }
+
 }
 
 html:lang(ja) .box-one-text {
   top: 17px;
   left: 130px;
   font-size: 15px;
+
+  @media (max-width: 430px) {
+    left: 102px;
+  }
 }
 
 html:lang(ja) .box-two-text {
   top: 98px;
   left: 344px;
   font-size: 15px;
+
+  @media (max-width: 430px) {
+    left: 307px;
+  }
 }
 
 html:lang(ja) .box-three-text {
   left: 67px;
   font-size: 15px;
+
+  @media (max-width: 430px) {
+    left: 48px;
+  }
 }
 
 .about-golfin-game-container {
@@ -153,6 +202,18 @@ html:lang(ja) .box-three-text {
   width: 100%;
   background: linear-gradient(180deg, rgba(217, 217, 217, 0.00) 0%, #FFF 100%);
   height: 110px;
+
+  @media (max-width: 450px) {
+    z-index: -1;
+  }
+
+  @media (max-width: 436px) {
+    height: 76px;
+  }
+
+  @media (max-width: 411px) {
+    height: 32px;
+  }
 }
 
 .box {
@@ -294,5 +355,9 @@ html:lang(ja) .box-subtext {
     font-weight: 700;
     line-height: normal;
     text-transform: uppercase;
+
+    @media (max-width: 452px) {
+      font-size: 19px;
+    }
   }
 }
