--- a/src/features/gps/downloadGamePage/assets/styles/header.css
+++ b/src/features/gps/downloadGamePage/assets/styles/header.css
@@ -25,7 +25,6 @@
   width: 100%;
   max-width: 452px;
   margin: auto;
-  aspect-ratio: 4 / 3;
   font-family: Inter;
 }
 
@@ -83,6 +82,10 @@
   height: 100%;
 }
 
+.safari .app-store-box {
+  mix-blend-mode: initial;
+}
+
 .app-store-overlay {
   position: relative;
   top: 0;
@@ -104,6 +107,10 @@
   font-style: normal;
   font-weight: 600;
   line-height: normal;
+
+  @media (max-width: 440px) {
+    font-size: 17px;
+  }
 }
 
 .app-store-icons {
